[tool.poetry]
name = "easyocr_hybrid_onnx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
poethepoet = "0.12.2"
Pillow = "8.2.0"
opencv-contrib-python = "4.4.0.46"
scikit-image = "0.19.1"
python-bidi = "0.4.2"
PyYAML = "6.0"
torch-summary = "1.4.5"
typing-extensions = "4.2.0"
protobuf = "3.20.0"
onnx = "1.11.0"
onnxruntime = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-torch-cuda11 = "pip install torch==1.10.1+cu113 torchvision==0.11.2+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"